testing tailwind classes

--- a/styles/Wallet.module.css
+++ b/styles/Wallet.module.css
@@ -1,3 +1,7 @@
+.main {
+  
+}
+
 .footer {
     display: flex;
     flex: 1;
@@ -5,11 +9,11 @@
     border-top: 1px solid #eaeaea;
     justify-content: center;
     align-items: center;
-  }
-  
-  .footer a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-  }
+}
+
+.footer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
